--- a/Amex.CCA.WebClient/app/src/app/shared/header.template.html
+++ b/Amex.CCA.WebClient/app/src/app/shared/header.template.html
@@ -1,4 +1,10 @@
-<div>Header Completed
-
-    <div class="pull-right"><user-profile></user-profile></div>
+<div>
+    <div class="row header">
+        <div class="col-md-10">
+            <h3>Amex CC Application</h3>
+        </div>
+        <div class="col-md-2 pull-right">
+            <user-profile></user-profile>
+        </div>
+    </div>
 </div>
