--- a/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>Register User</h3>
+    <h3>Register</h3>
     <br/>
     <div>
         <form [formGroup]="registrationForm" (ngSubmit)="onRegistrationSubmit(registrationForm.value)">
