--- a/Amex.CCA.WebClient/app/src/app/login/login.styles.scss
+++ b/Amex.CCA.WebClient/app/src/app/login/login.styles.scss
@@ -8,7 +8,12 @@
     margin-right: 1em;
 }
 
+.margin-top-five
+{
+    margin-top:5em;
+}
+
 .align-center
 {
-    text-align: center
+    text-align: center;
 }
