--- a/Amex.CCA.WebClient/app/src/app/login/login.template.html
+++ b/Amex.CCA.WebClient/app/src/app/login/login.template.html
@@ -1,20 +1,15 @@
-<div class="row">
-  <div class="row">
-    <div class="col-md-2">
-      <h3>Login</h3>
-    </div>
-    <div class="col-md-4">
-
-    </div>
-  </div>
+<div class="row margin-top-five">
   <form #loginForm="ngForm" (ngSubmit)="onLoginSubmit(loginForm.value)">
+      <div class="row">
+          <div class="col-md-1"></div>
+          <div class="col-md-6 align-center">
+            <h3>Amex CC Application</h3>
+          </div>
+        </div>
     <div class="row form-group">
-      <div class="col-md-2">
-      </div>
-      <div class="col-md-4">
-      </div>
     </div>
     <div class="row form-group">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <label for="txtUserName">User Name<span class="required">*</span></label>
       </div>
@@ -23,6 +18,7 @@
       </div>
     </div>
     <div class="row form-group">
+      <div class="col-md-1"></div>
       <div class="col-md-2">
         <label for="txtPassword">Password<span class="required">*</span></label>
       </div>
@@ -31,6 +27,7 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-1"></div>
       <div class="col-md-2"></div>
       <div class="col-md-4">
         <button class="btn btn-primary pull-left margin-right-one" type="submit" [disabled]="!loginForm.valid">Login</button>
