--- a/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-registration.template.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3>Register</h3>
+    <h3>Register here to access Amex CC Application</h3>
     <br/>
     <div>
         <form [formGroup]="registrationForm" (ngSubmit)="onRegistrationSubmit(registrationForm.value)">
@@ -47,7 +47,8 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-4">
-                    <button [disabled]="!registrationForm.valid" class="btn btn-primary pull-right" type="submit">Register</button>
+                    <button [disabled]="!registrationForm.valid" class="btn btn-primary pull-left margin-right-one" type="submit">Register</button>
+                    <button class="btn btn-primary pull-left" type="button" (click)="goToLogin()">Go to Login</button>                    
                     <!-- <button  class="btn btn-primary pull-right" type="submit">Register</button> -->
                 </div>
             </div>
