--- a/Amex.CCA.WebClient/app/src/app/user/user-approve.template.html
+++ b/Amex.CCA.WebClient/app/src/app/user/user-approve.template.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div *ngIf="!usersToApprove">
-           loading...
+           No Users To Approve
     </div>
     <div *ngIf="usersToApprove" class="">
         <div class="col-xs-12 panel-heading approve_panel">
@@ -36,7 +36,7 @@
         <div class="col-xs-12 ">
                 <div class="pull-right ">
                     <div class="pull-right">
-                        <button class="btn btn-default">Reject</button>
+                        <button class="btn btn-default" (click)="removeChanges()">Reject</button>
                         <button class="btn btn-primary" (click)="saveApproved(usersToApprove)" >Approve</button>
                     </div>
                 </div>
