--- a/Amex.CCA.WebClient/app/src/app/app.component.html
+++ b/Amex.CCA.WebClient/app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row"><header *ngIf="loginService.isUserAuthorised()">></header></div>
+    <div class="row"><header [user]="this.loginService.loggedUser" *ngIf="loginService.isUserAuthorised()">></header></div>
     <div class="row">
       <div class="col-md-2">
          <nav-bar *ngIf="loginService.isUserAuthorised()">>
