--- a/Amex.CCA.WebClient/app/src/app/shared/header.template.html
+++ b/Amex.CCA.WebClient/app/src/app/shared/header.template.html
@@ -4,7 +4,7 @@
             <h3>Amex CC Application</h3>
         </div>
         <div class="col-md-2 pull-right">
-            <user-profile></user-profile>
+            <user-profile [user]="user"></user-profile>
         </div>
     </div>
 </div>
