--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -199,6 +199,15 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <div class="col-md-3">
+            <label for="cardstatus">Attachments</label>
+          </div>
+          <div class="col-md-3 lightblue" *ngFor="let attachment of creditcard?.AttachmentView">
+            <label>- {{attachment.FileName}} </label>
+          </div>
+        </div>
+
           <label class="btn btn-default" (click)="openCreditCardView(creditcard?.CreditCardId)"> View </label>
           <label class="btn btn-default" (click)="openCreditCardEdit(creditcard?.CreditCardId)"> Edit </label>
           <label *ngIf="IsAdmin" class="btn btn-default" (click)="openCreditCardApprove(creditcard?.CreditCardId)"> Approve </label>
