Review popup ui changes

--- a/Amex.CCA.WebClient/app/src/app/creditcard/approvecreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/approvecreditcard.template.html
@@ -143,11 +143,12 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-3">
+            <!--<div class="col-md-3">
                 <label>Comment</label>
-            </div>
-            <div class="col-md-9">
-                <input type="text" class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="Note">
+            </div>-->
+            <div class="col-md-12">
+                <label>Note</label><textarea class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="ReviewerComment"></textarea>
+                <!--<input type="text" class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="Note">-->
             </div>
         </div>
 
