--- a/Amex.CCA.WebClient/app/src/app/creditcard/approvecreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/approvecreditcard.template.html
@@ -6,16 +6,19 @@
         </div>
         <div class="modal-body">
             <div class="form-group">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label>Name in Full </label>
                 </div>
-                <div class="col-md-3 ">
+                <div class="col-md-8">
                     <label>- {{CreditCard.FullName}}</label>
                 </div>
-                <div class="col-md-3">
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-4">
                     <label>Display Name</label>
                 </div>
-                <div class="col-md-3 ">
+                <div class="col-md-8">
                     <label>- {{CreditCard.DisplayName}}</label>
                 </div>
             </div>
@@ -147,7 +150,7 @@
                 <label>Comment</label>
             </div>-->
             <div class="col-md-12">
-                <label>Note</label><textarea class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="ReviewerComment"></textarea>
+                <label>Reviewer Comment</label><textarea class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="ReviewerComment"></textarea>
                 <!--<input type="text" class="form-control" [(ngModel)]="CreditCard.ReviewerComment" name="Note">-->
             </div>
         </div>
