--- a/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/creditcard/viewcreditcard.template.html
@@ -6,20 +6,21 @@
         </div>
         <div class="modal-body">
             <div class="form-group">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <label>Name in Full </label>
                 </div>
-                <div class="col-md-3 ">
+                <div class="col-md-8">
                     <label>- {{CreditCard.FullName}}</label>
                 </div>
-                <div class="col-md-3">
+            </div>
+            <div class="form-group">
+                <div class="col-md-4">
                     <label>Display Name</label>
                 </div>
-                <div class="col-md-3 ">
+                <div class="col-md-8 ">
                     <label>- {{CreditCard.DisplayName}}</label>
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="col-md-3">
                     <label for="txtNic">NIC</label>
