--- a/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
+++ b/Amex.CCA.WebClient/app/src/app/dashboard/dashboard.template.html
@@ -1,4 +1,5 @@
-<div class="panel panel-primary">
+<div class="col-md-offset-3 loader" *ngIf="IsLoaderActive"></div>
+<div class="panel panel-primary" *ngIf="!IsLoaderActive">
   <div style="height: 50px;padding:0" class="panel-heading">
     <div class="form-group row">
       <div class="col-xs-3" style="align-content:center">
